--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -20,7 +20,7 @@ body {
     justify-content: flex-start;
     margin-top: 10px;
     margin-left: 100px;
-    background-image: url("../static_pic/INTI_PIC.png");
+    /*background-image: url("../static_pic/INTI_PIC.png");*/
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
