--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -27,6 +27,7 @@ body {
 }
 
 /* Frame form*/
+/*
 form {
     text-align: center;
     width: 30vh;
@@ -35,8 +36,7 @@ form {
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-
+}*/
 /* Input section*/
 input[type="text"],
 input[type="password"], 
