--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,14 +1,10 @@
 .heading {
-    position: fixed; /* Keeps it at the top even when scrolling */
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px 20px;
-    background-color: #f5f5f5;
-    font-size: 24px;
-    font-weight: bold;
-    color: #333;
-    border-bottom: 1px solid #ccc;
+    background-image: url("../static_pic/INTI_LOGO.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    height: 100px; /* <--- Important */
+    width: 100%;    /* Optional: full width */
 }
 
 body {
@@ -37,6 +33,7 @@ form {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }*/
+
 /* Input section*/
 input[type="text"],
 input[type="password"], 
