--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -8,7 +8,7 @@
 <body>
     <form method="POST">
         <h1>Forgot Password</h1>
-        <h4><noBold>Entering your email address to get the reset passowrd link</noBold></h4>
+        <h4><span>Entering your email address to get the reset passowrd link</span></h4>
         <h6>Remain: check either one of them enough and others use full name to check or user</h6>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
