--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position:left top;
-    height: 100px; /* <--- Important */
+    height: 250px; /* <--- Important */
     width: 100%;    /* Optional: full width */
 }
 
@@ -23,7 +23,7 @@ body {
 }
 
 /* Frame form*/
-/*
+
 form {
     text-align: center;
     width: 30vh;
@@ -32,7 +32,7 @@ form {
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}*/
+}
 
 /* Input section*/
 input[type="text"],
@@ -57,7 +57,7 @@ button {
     margin-top: 10px;
 }
 
-.noBold {
+.span {
     font-weight: normal;
 }
 
