--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -11,7 +11,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    display: flex;
+    /*display: flex;*/
     align-items: center;
     justify-content: flex-start;
     margin-top: 10px;
