--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,3 +1,9 @@
+/* Reset browser defaults */
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 .heading {
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
@@ -16,7 +22,7 @@ body {
     justify-content: flex-start;
     margin-top: 30px;
     margin-left: 100px;
-    /*background-image: url("../static_pic/INTI_PIC.png");*/
+    background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
