--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -13,8 +13,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;  /* Stack elements vertically */
-    align-items: center;     /* Center content horizontally */
-    justify-content: flex-start;  /* Align content at the top */
+    margin-left: 70px;
     background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
     background-position: center;
