--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -5,7 +5,6 @@
     background-position: left top;
     height: 100px; /* <--- Important */
     width: 100%;    /* Optional: full width */
-    margin-bottom: 100px;  /* Space between heading and body content */
 }
 
 body {
@@ -13,6 +12,7 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;  /* Stack elements vertically */
+    margin-top: 120px;
     margin-left: 70px;
     background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
