--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,9 +1,21 @@
+.heading {
+    background-image: url("../static_pic/INTI_LOGO.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: left top;
+    height: 100px; /* <--- Important */
+    width: 100%;    /* Optional: full width */
+    margin-bottom: 120px;
+}
+
+
 body {
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;       /* Stack elements vertically */
-    align-items: left 70px;          /* Center horizontally */
+    align-items: flex-start;     /* Align items to the left */
+    padding-left: 70px;          /* Add 70px space on the left */
     justify-content: center;      /* Center vertically */
     min-height: 100vh;            /* Take full height */
     background-image: url("../static_pic/INTI_PIC.png");
