--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -17,9 +17,9 @@ body {
     align-items: flex-start;     /* Align items to the left */
     padding-left: 70px;          /* Add 70px space on the left */
     justify-content: center;      /* Center vertically */
-    min-height: 100vh;            /* Take full height */
     background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
+    margin-top: 100px;
     background-position: center;
     background-repeat: no-repeat;
 }
