--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,12 +1,11 @@
 /* Heading stays fixed at the top */
 .heading {
     position: absolute;
-    top: 0;
-    left: 0;
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left top;
+    padding: 10px;
     height: 100px;
     width: 100%;
     z-index: 10;
@@ -25,6 +24,9 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    
+    margin-top: 120px;
+    margin-left: 70px;
 }
 
 /* Frame form*/
