--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,6 +1,5 @@
 /* Heading stays fixed at the top */
 .heading {
-    position: absolute;
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
@@ -15,9 +14,6 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    display: flex;
-    align-items: flex-start;      /* Align child to left */
-    justify-content: center;      /* Center vertically */
     background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
     background-position: center;
@@ -28,7 +24,7 @@ body {
 /* Frame form*/
 
 form {
-    align-items: left 70px;
+    margin-left: 70px;
     text-align: center;
     width: 30vh;
     padding: 50px;
