--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left top;
-    margin: 10px;
+    padding: 50px;
     height: 100px;
     width: 100%;
 }
