--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,11 +1,10 @@
-/* Heading stays fixed at the top */
 .heading {
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: left top;
-    margin-left: 15px;
-    margin-top: 15px;
+    background-position: left top 10px;
+    padding-top: 10px;      /* Adds internal spacing from top */
+    padding-left: 10px;     /* Optional: spacing from left */
     height: 100px;
     width: 100%;
 }
