--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -2,9 +2,7 @@
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: left top;
-    padding-top: 20px;      /* Adds internal spacing from top */
-    padding-left: 40px;     /* Optional: spacing from left */
+    background-position: left 50px top 20px;
     height: 100px;
     width: 100%;
 }
