--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -2,7 +2,7 @@
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: left 50px top 30px;
+    background-position: left 50px top;
     /*background-position: left top;*/
     height: 100px;
     width: 100%;
@@ -23,7 +23,7 @@ body {
 /* Frame form*/
 
 form {
-    margin-top: 200px;
+    margin-top: 150px;
     margin-left: 70px;
     text-align: center;
     width: 30vh;
