--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,4 +1,4 @@
-.heading {
+header {
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     padding: 0;
-    height: 90vh;
+    height: 100vh;
     background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
     background-position: center;
