--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    
+    <header></header>
     <form method="POST">
         <h1>Login Here</h1>
         <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
