--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -1,4 +1,4 @@
-header {
+.heading {
     background-image: url("../static_pic/INTI_LOGO.png");
     background-repeat: no-repeat;
     background-size: contain;
