--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+    <div class="heading"></div>
+
     <form method="POST">
         <h1>Forgot Password</h1>
         <h4><span class=".span">Entering your email address to get the reset passowrd link</span></h4>
