--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+    <div class="heading"></div>
+
     <form method="POST">
         <h1>Enter OTP</h1>
         <div class="otp-frame">
