--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+    <div class="heading"></div>
+
     <form method="POST">
         <h1>Register as New User</h1>
         <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
