--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+    <div class="heading"></div>
+
     <form method="POST">
         <h1>Reset Your Password</h1>
         <h4>Make sure both of them are similar <br>
