--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -10,8 +10,7 @@
 
     <form method="POST">
         <h1>Forgot Password</h1>
-        <h4><span class=".span">Entering your email address to get the reset passowrd link</span></h4>
-        <h6>Remain: check either one of them enough and others use full name to check or user</h6>
+        <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
 
