--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -10,9 +10,9 @@
 
     <form method="POST">
         <h1>Reset Your Password</h1>
-        <h4>Make sure both of them are similar <br>
+        <h4> <span class="span">Make sure both of them are similar <br>
             Password length must be between 8-20 <br>
-            Password must include special character <br>
+            Password must include special character <br></span>
         </h4>
 
         <input type="password" name="password1" placeholder="Password" value="{{ password_text_1 }}">
