--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -20,12 +20,8 @@
 
         <div class="button-frame">
             <a href="{{ url_for('login') }}">
-                <button type="button" name="login">Send Verification</button>
+                <button type="submit" name="login">Confirm</button>
             </a>
-        </div>
-
-        <div class="button-frame">
-            <a href="{{ url_for('forgot_password_OTP_page') }}">Back</a>
         </div>
 
     </form>
