--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -20,7 +20,7 @@
 
         <div class="button-frame">
             <a href="{{ url_for('login') }}">
-                <button type="submit" name="login">Confirm</button>
+                <button type="button" name="login">Confirm</button>
             </a>
         </div>
 
