--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -10,7 +10,7 @@
 
     <form method="POST">
         <h1>Register as New User</h1>
-        <div>
+        <div class="form-left">
             <input type="text" name="username" placeholder="Full Name as IC" size="12" value="{{ username_text }}">
             <br>
             <input type="text" name="userid" placeholder="Staff ID" value="{{ userid_text }}">
@@ -20,7 +20,7 @@
             <input type="email" name="email" placeholder="Email Address" value="{{ email_text }}">
         </div>
 
-        <div>
+        <div class="form-right">
             <input type="tel" name="contact" placeholder="Contact Number" size="12" value="{{ contact_text }}">
             <br>
             <input type="password" name="password1" placeholder="Password" value="{{ password1_text }}">
