--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -61,7 +61,11 @@ button {
     font-weight: normal;
 }
 
-
+.form-left, .form-right {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
 
 
 
