--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -61,8 +61,14 @@ button {
     font-weight: normal;
 }
 
-.form-left, .form-right {
-    display: flex;
+.form-left {
+    display: left;
+    flex-direction: column;
+    width: 40%;
+}
+
+.form-right {
+    display: right;
     flex-direction: column;
     width: 40%;
 }
