--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -26,7 +26,7 @@ form {
     margin-top: 150px;
     margin-left: 70px;
     text-align: center;
-    width: 30vh;
+    width: 60vh;
     padding: 50px;
     border: 2px solid #ccc;
     border-radius: 10px;
@@ -61,19 +61,17 @@ button {
     font-weight: normal;
 }
 
-.form-left {
-    display: left;
-    flex-direction: column;
-    width: 40%;
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
-.form-right {
-    display: right;
+.form-left, .form-right {
+    display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 48%;
 }
-
-
 
 
 
