--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -34,6 +34,10 @@ form {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+form.form_register {
+    width: 50vh;
+}
+
 /* Input section*/
 input[type="text"],
 input[type="password"], 
