--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -8,7 +8,7 @@
 <body>
     <div class="heading"></div>
 
-    <form method="POST" width="100vh">
+    <form method="POST" class="form_register">
         <h1>Register as New User</h1>
         <div class="form-container">
             <div class="form-left">
