--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -7,8 +7,7 @@
 
 <body>
     <div class="heading"></div>
-
-    <form method="POST" class="form_register">
+    <form method="POST">
         <h1>Register as New User</h1>
         <div class="form-container">
             <div class="form-left">
