--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -14,25 +14,28 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    display: flex; /* Needed for centering */
+    justify-content: center; /* Horizontal center */
+    align-items: center; /* Vertical center */
     /*background-image: url("../static_pic/INTI_PIC.png");*/
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    overflow: hidden;
 }
 
-/* Frame form*/
+/* Frame form */
 form {
-    margin-top: 150px;
     text-align: center;
     width: 60vh;
-    background-position: center;
     padding: 50px;
     border: 2px solid #ccc;
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
+
 
 /* Input section*/
 input[type="text"],
