--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -6,9 +6,7 @@
 </head>
 
 <body>
-    <div class="heading"></div>
-
-    <form method="POST">
+    <form method="POST" class="heading">
         <h1>Forgot Password</h1>
         <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <br>
