--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="heading"></div>
-    <form method="POST">
+    <form method="POST" class="heading">
         <h1>Login Here</h1>
         <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
         <br>
