--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-    <div class="heading"></div>
-    <form method="POST">
+    <form method="POST" class="heading">
         <h1>Register as New User</h1>
         <div class="form-container">
             <div class="form-left">
