--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <form method="POST" class="heading">
+    <form method="POST">
+        <div class="heading"></div>
         <h1>Forgot Password</h1>
         <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <br>
