--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-    <div class="heading"></div>
-    <form method="POST" class="heading">
+    <form method="POST">
+        <div class="heading"></div>
         <h1>Login Here</h1>
         <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
         <br>
