--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <form method="POST" class="heading">
+    <form method="POST">
+        <div class="heading"></div>
         <h1>Register as New User</h1>
         <div class="form-container">
             <div class="form-left">
