--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <form method="POST" class="heading">
+    <form method="POST">
+        <div class="heading"></div>
         <h1>Reset Your Password</h1>
         <h4> <span class="span">Make sure both of them are similar <br>
             Password length must be between 8-20 <br>
