--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -15,7 +15,8 @@
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
 
-        <div style="text-align: right;">
+        
+        <div class="button-frame"></div>
             <a href="{{ url_for('forgot_password_page') }}">Forgot Password</a>
         </div>
 
