--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -13,6 +13,7 @@ body {
     padding: 0;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
