--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -13,6 +13,15 @@
         <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
         <br>
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+
+
+        <div class="form-container">
+            <div class="form-left">
+                <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
+                <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+            </div>
+        </div>
+
     
         <div class="button-frame">
             <a href="{{ url_for('forgot_password_page') }}">Forgot Password</a>
