--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -20,7 +20,7 @@ body {
 /* Frame form */
 form {
     text-align: center;
-    display: flex;
+    display: center;
     width: 60vh;
     padding: 50px;
     border: 2px solid #ccc;
