--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -28,7 +28,7 @@
 
         <div class="button-frame">
             <a href="{{ url_for('login') }}">
-                <button type="button" name="login">Submit</button>
+                <button type="submit" name="register">Submit</button>
             </a>
             <br><br>
             <a href="{{ url_for('login') }}">Back to Login</a>
