--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -16,11 +16,11 @@
                 <input type="text" name="username" placeholder="Full Name as IC" value="{{ username_text }}">
                 <input type="text" name="userid" placeholder="Staff ID" value="{{ userid_text }}">
                 <input type="text" name="department" placeholder="Department" value="{{ department_text }}">
-                <input type="email" name="email" placeholder="Email Address" value="{{ email_text }}">
+                <input type="email" name="email" placeholder="Email Address" value="{{ email_text }}" pattern="[a-zA-Z0-9._%+-]+@newinti\.edu\.my">
             </div>
     
             <div class="form-right">
-                <input type="tel" name="contact" placeholder="Contact Number" value="{{ contact_text }}">
+                <input type="tel" name="contact" placeholder="Contact Number" value="{{ contact_text }}" pattern="^01\d{8,9}$">
                 <input type="password" name="password1" placeholder="Password" value="{{ password1_text }}">
                 <input type="password" name="password2" placeholder="Confirm Password" value="{{ password2_text }}">
             </div>
