--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -45,7 +45,8 @@ form {
 input[type="text"],
 input[type="password"], 
 input[type="email"], 
-input[type="tel"] {
+input[type="tel"]
+select {
     width: 25vh;
     padding: 10px;
     margin: 1% 0;
