--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -27,7 +27,7 @@
                     <option value="RD">RD</option>
                     <option value="SOHOS">SOHOS</option>
                 </select>
-                <input type="text" name="email" placeholder="Email Address" value="{{ email_text }}" pattern="[a-zA-Z0-9._%+-]+@newinti\.edu\.my">
+                <input type="text" name="email" placeholder="Email Address" value="{{ email_text }}" pattern="[a-zA-Z0-9._%+-]+@newinti\.edu\.my$">
             </div>
     
             <div class="form-right">
