--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -13,6 +13,7 @@
         <br>
         <div class="form-container">
             <div class="form-left">
+                <lable text="Username">Username</lable><br>
                 <input type="text" name="username" placeholder="Full Name as IC" value="{{ username_text }}">
                 <input type="text" name="userid" placeholder="Staff ID" value="{{ userid_text }}">
                 <select name="department" placeholder="Department" value="{{ department_text }}">
