--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -13,8 +13,8 @@
         <br>
         <div class="form-container">
             <div class="form-left">
-                <label class="text-position">Full Name as IC</label><br>
-                <input type="text" name="username" value="{{ username_text }}">
+                <label class="text-position">Full Name as IC</label>
+                <input type="text" name="username" value="{{ username_text }}"><br>
                 
                 <label class="text-position">Staff ID</label><br>
                 <input type="text" name="userid" value="{{ userid_text }}">
