--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -16,13 +16,13 @@
                 <label class="text-position">Full Name as IC</label>
                 <input type="text" name="username" value="{{ username_text }}"><br>
                 
-                <label class="text-position">Staff ID</label><br>
-                <input type="text" name="userid" value="{{ userid_text }}">
+                <label class="text-position">Staff ID</label>
+                <input type="text" name="userid" value="{{ userid_text }}"><br>
 
-                <label class="text-position">Email Address</label><br>
-                <input type="text" name="email" value="{{ email_text }}" pattern="[a-zA-Z0-9._%+-]+@newinti\.edu\.my$">
+                <label class="text-position">Email Address</label>
+                <input type="text" name="email" value="{{ email_text }}" pattern="[a-zA-Z0-9._%+-]+@newinti\.edu\.my$"><br>
 
-                <label class="text-position">Department</label><br>
+                <label class="text-position">Department</label>
                 <select name="department" value="{{ department_text }}">
                     <option value="" disabled selected>Select Department</option>
                     <option value="SOC">SCHOOL OF COMPUTING(SOC)</option>
@@ -38,13 +38,13 @@
             </div>
     
             <div class="form-right">
-                <label class="text-position">Contact Number</label><br>
-                <input type="tel" name="contact" value="{{ contact_text }}" pattern="^01\d{8,9}$">
+                <label class="text-position">Contact Number</label>
+                <input type="tel" name="contact" value="{{ contact_text }}" pattern="^01\d{8,9}$"><br>
 
-                <label class="text-position">Password</label><br>
-                <input type="password" name="password1" value="{{ password1_text }}">
+                <label class="text-position">Password</label>
+                <input type="password" name="password1" value="{{ password1_text }}"><br>
 
-                <label class="text-position">Confirm Password</label><br>
+                <label class="text-position">Confirm Password</label>
                 <input type="password" name="password2" value="{{ password2_text }}">
             </div>
         </div>
