--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -12,7 +12,8 @@
         <h1>Forgot Password</h1>
         <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <br>
-        <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
+        <label class="text-position">Email Address</label>
+        <input type="email" name="textbox" value="{{ forgot_email_text }}">
         <br>
 
         <div class="button-frame">
