--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -15,8 +15,10 @@
             Password must include special character <br></span>
         </h4>
 
-        <input type="password" name="password1" placeholder="Password" value="{{ password_text_1 }}">
-        <br>
+        <label class="text-position">Passowrd</label>
+        <input type="password" name="password1" value="{{ password_text_1 }}"><br>
+
+        <label class="text-position">Confirm Password</label>
         <input type="password" name="password2" placeholder="Confirm your Password" value="{{ password_text_2 }}">
 
         <div class="button-frame">
